{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 41,
  "lineage": "e95edff7-a86c-cade-d010-11e6ac17a3c0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a984749760e8f5ec",
            "arn": "arn:aws:ec2:us-east-1:696424197159:elastic-ip/eipalloc-0a984749760e8f5ec",
            "domain": "vpc",
            "id": "eipalloc-0a984749760e8f5ec",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-30-14-56.compute-1.amazonaws.com",
            "public_ip": "100.30.14.56",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-nat-eip",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-nat-eip",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:696424197159:internet-gateway/igw-0aee5e7f06b7f63af",
            "id": "igw-0aee5e7f06b7f63af",
            "owner_id": "696424197159",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-igw",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-igw",
              "Terraform": "true"
            },
            "vpc_id": "vpc-04f1482266a877e14"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a984749760e8f5ec",
            "association_id": "eipassoc-0a1e149fa75a75971",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0a817ea772a7013c0",
            "network_interface_id": "eni-08da8bc0d4f6a2c1f",
            "private_ip": "10.0.0.87",
            "public_ip": "100.30.14.56",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c7203cc9c3054830",
            "tags": {
              "Name": "dev-nat",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-nat",
              "Terraform": "true"
            },
            "vpc_id": "vpc-04f1482266a877e14"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:696424197159:route-table/rtb-082ddf317debf3400",
            "id": "rtb-082ddf317debf3400",
            "owner_id": "696424197159",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a817ea772a7013c0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-rt",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-private-rt",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f1482266a877e14"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696424197159",
            "id": "rtb-082ddf317debf3400",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:696424197159:route-table/rtb-0e0595bec96608290",
            "id": "rtb-0e0595bec96608290",
            "owner_id": "696424197159",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aee5e7f06b7f63af",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-rt",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-public-rt",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f1482266a877e14"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696424197159",
            "id": "rtb-0e0595bec96608290",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d880045cdd6d1990",
            "region": "us-east-1",
            "route_table_id": "rtb-082ddf317debf3400",
            "subnet_id": "subnet-07857432efde5313d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03adb5d379c5d741a",
            "region": "us-east-1",
            "route_table_id": "rtb-082ddf317debf3400",
            "subnet_id": "subnet-0a64e3a9b9946bf17"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd330decd88643f8",
            "region": "us-east-1",
            "route_table_id": "rtb-082ddf317debf3400",
            "subnet_id": "subnet-096bf56a5b538cafb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee7e44a1d4fb54f7",
            "region": "us-east-1",
            "route_table_id": "rtb-0e0595bec96608290",
            "subnet_id": "subnet-0c7203cc9c3054830"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039ac3c0a857f9b61",
            "region": "us-east-1",
            "route_table_id": "rtb-0e0595bec96608290",
            "subnet_id": "subnet-0bb1f18f8680de381"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4b5c905cc14dd1b",
            "region": "us-east-1",
            "route_table_id": "rtb-0e0595bec96608290",
            "subnet_id": "subnet-06b016130391446fe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:696424197159:subnet/subnet-07857432efde5313d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07857432efde5313d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "696424197159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-04f1482266a877e14"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696424197159",
            "id": "subnet-07857432efde5313d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:696424197159:subnet/subnet-0a64e3a9b9946bf17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a64e3a9b9946bf17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "696424197159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-04f1482266a877e14"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696424197159",
            "id": "subnet-0a64e3a9b9946bf17",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:696424197159:subnet/subnet-096bf56a5b538cafb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096bf56a5b538cafb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "696424197159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-private-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-private-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-04f1482266a877e14"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696424197159",
            "id": "subnet-096bf56a5b538cafb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:696424197159:subnet/subnet-0c7203cc9c3054830",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7203cc9c3054830",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "696424197159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-public-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-04f1482266a877e14"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696424197159",
            "id": "subnet-0c7203cc9c3054830",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:696424197159:subnet/subnet-0bb1f18f8680de381",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb1f18f8680de381",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "696424197159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-public-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-public-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-04f1482266a877e14"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696424197159",
            "id": "subnet-0bb1f18f8680de381",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:696424197159:subnet/subnet-06b016130391446fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b016130391446fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "696424197159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-public-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-public-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-04f1482266a877e14"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696424197159",
            "id": "subnet-06b016130391446fe",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:696424197159:vpc/vpc-04f1482266a877e14",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_route_table_id": "rtb-0f506dc64ad445b85",
            "dhcp_options_id": "dopt-0922254c9f7cd0ec2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04f1482266a877e14",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f506dc64ad445b85",
            "owner_id": "696424197159",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-vpc",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "696424197159",
            "id": "vpc-04f1482266a877e14",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}